crates/cli/tests/snapshots/deprecated__lint_b7ca5bc4bbe1fe57468d47f2df8fac29361ae090a84ea6afdea842170517ae14.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"builtins.toPath x\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ builtins.toPath x
   │ ────────┬────────  
   │         ╰────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
