crates/cli/tests/snapshots/deprecated__lint_bb74cb76d719d642f0b7fe144f824c42e2e1d6475f7f1ee720f0b7ecfbfc0ebb.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.evalOptionValue\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.evalOptionValue
   │ ─────────┬─────────  
   │          ╰─────────── External use of lib.evalOptionValue is deprecated
───╯
