crates/cli/tests/snapshots/deprecated__lint_cdee039118a7d0b42a9e38478e519cde0ef023bb00f7812e2a8cd837bc4c1d68.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.isInOldestRelease 2411\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.isInOldestRelease 2411
   │ ──────────┬──────────  
   │           ╰──────────── lib.isInOldestRelease is deprecated, use lib.oldestSupportedReleaseIsAtLeast instead
───╯
