crates/cli/tests/snapshots/deprecated__lint_d021f00da46d839489851cf97601ab0b8df174527d2dc8400177368e129c25b7.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.stringsWithDeps\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.stringsWithDeps
   │ ──────────┬─────────  
   │           ╰─────────── pkgs.stringsWithDeps is deprecated, use pkgs.lib.stringsWithDeps instead
───╯
