crates/cli/tests/snapshots/deprecated__lint_d16d8ff9717d7ea532cd5a3cf55efe4cacc2400b6ab9ef1940e1d2238182d6e4.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.buildPlatform\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.buildPlatform
   │ ─────────┬────────  
   │          ╰────────── pkgs.buildPlatform is deprecated, use pkgs.stdenv.buildPlatform instead
───╯
