crates/cli/tests/snapshots/deprecated__lint_db98f6f1173aa09079aafd036ca46881e33ebb308fcb0e03b2751199c0ef8752.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.cli.toGNUCommandLine opts attrs\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.cli.toGNUCommandLine opts attrs
   │ ────────────┬───────────  
   │             ╰───────────── lib.cli.toGNUCommandLine is deprecated, use lib.cli.toCommandLine instead
───╯
