crates/cli/tests/snapshots/deprecated__lint_f18d82cf9141eb2fefbc5d159c524dde5b82bafd14faf97f4d8ff8736de0db63.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.targetPlatform\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.targetPlatform
   │ ─────────┬─────────  
   │          ╰─────────── pkgs.targetPlatform is deprecated, use pkgs.stdenv.targetPlatform instead
───╯
